# Kinisot

./: .gitignore  AUDIT.md  CHANGELOG.md  CITATION.cff  Hess_to_Freq.py  IMPLEMENTATION_PLAN.md  Kinisot.py  LICENSE.txt  MANIFEST.in  README.md  SUPPORT.md  changelog.txt  meta.yaml  pyproject.toml  setup.py
.github/workflows/: ci.yml  publish.yml
examples/: CH3F_F_rc.out  README.md
examples/gaussian/: DATS_rct.out  claisen_kinisot.sh  claisen_ts.out  diene.out  dienophile.out  tetramethylcyclohexane_kinisot.sh
examples/orca/: hat_gs_freq.hess  hat_gs_freq.inp  hat_gs_freq.out  hat_ts_freq.hess  hat_ts_freq.inp  hat_ts_freq.out  pentane_TT.hess  pentane_TT.out
kinisot/: Hess_to_Freq.py  Kinisot.py  __init__.py  __main__.py  cli.py  isotopes.py  scaling.py  thermo.py  vib_scale_factors.py
kinisot/examples/: CH3F_F_ts.out  Cl_H_Cl_RCT.out  Cl_H_Cl_TS.out  README.md  claisen_gs.out
kinisot/examples/gaussian/: DATS.out  claisen_prd.out  comparison.sh  diels_alder_kinisot.sh  tetramethylcyclohexane.out
kinisot/examples/orca/: pentane_GG.hess  pentane_GG.out
tests/: conftest.py  test_cli.py  test_kinisot.py
